--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -11,7 +11,7 @@ footer {
 .newsletter {
     background-color: $footerGray;
     color: whitesmoke;
-    position: absolute;
+    //position: absolute;
     text-align: center;
     padding: 20px;
     left: 20%;
@@ -55,7 +55,7 @@ footer {
 }
 
 .icons {
-    position: relative;
+    //position: relative;
     top: 2rem;
     left: 65%;
     width: 18rem;
