--- a/scss/_mediaQueries.scss
+++ b/scss/_mediaQueries.scss
@@ -16,6 +16,35 @@
     }
 }
 
+    @mixin hamburger-menu-color {
+        .navbar-toggler {
+            border: 3px solid red;
+            position: relative;
+            left: -20%;
+        }
+    
+        .navbar-toggler-icon {
+            background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='red' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+        }
+    
+        .navbar-toggler {
+            border: 2px solid red;
+        }
+}
+
+
+/* FOOTER MOBILE */
+
+@media (min-width: 300px){
+    .footer-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+
+}
+
 
 @media (max-width: 600px) {
     /* HEADER */
@@ -27,20 +56,7 @@
             width: 4rem;
         }
 
-        .navbar-toggler {
-            border: 3px solid red;
-            position: relative;
-            left: -20%;
-        }
-
-
-        .navbar-toggler-icon {
-            background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='red' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
-        }
-
-        .navbar-toggler {
-            border: 2px solid red;
-        }
+        @include hamburger-menu-color();
 
         .navbar-brand {
             position: relative;
@@ -53,7 +69,7 @@
             left: 14%;
         }
     }
-
+    /* MAIN */
     .page-message {
         position: relative;
         margin: 1rem;
@@ -200,6 +216,9 @@
     }
 
     .container {
+
+        @include hamburger-menu-color();
+
         .nav-link {
             position: relative;
             left: -100%;
@@ -230,6 +249,8 @@
             left: -11%;
             top: 5%;
         }
+
+        @include hamburger-menu-color();
     }
 
     /* FOOTER */
@@ -239,9 +260,9 @@
     }
 
     .newsletter {
-        top: 20rem;
         width: 20rem;
         height: 14rem;
+        margin: 3rem auto;
     }
 
     .icons {
@@ -305,18 +326,26 @@
         #logo {
             width: 30%;
         }
+
+        @include hamburger-menu-color();
     }
 
 
     /* FOOTER */
+
+    .footer-container {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        margin-top: 2rem;
+    }
 
     footer{
         height: 35vh;
     }
 
     .newsletter {
-        top: 0.5rem;
-        left: 7%;
+        margin-top: 1rem
     }
 
     /* HOME */
@@ -370,18 +399,19 @@
 
 }
 
+@media (min-width: 1025px) {
+    .footer-container {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        .newsletter {
+            margin-top: 1.5rem;
+        }
+    }
+
+}
+
 @media (min-width: 1025px) and (max-width: 1366px){
-    /* FOOTER */
-    .newsletter {
-        height: 95%;
-        top: 2.5%;
-    }
-
-    .icons {
-        height: 95%;
-        top: 6px;
-    }
-
     /* HOME */
     .slider {
         @include slider-styles();
